[package]
name = "askama"
version = "0.13.0"
description = "Type-safe, compiled Jinja-like templates for Rust"
documentation = "https://docs.rs/askama"
keywords = ["markup", "template", "jinja2", "html"]
categories = ["template-engine"]
homepage = "https://github.com/djc/askama"
repository = "https://github.com/djc/askama"
license = "MIT OR Apache-2.0"
workspace = ".."
readme = "../README.md"
edition = "2021"
rust-version = "1.65"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["config", "humansize", "num-traits", "urlencode"]
config = ["askama_derive/config"]
humansize = ["askama_derive/humansize", "dep:humansize"]
num-traits = ["askama_derive/num-traits", "dep:num-traits"]
serde_json = ["askama_derive/serde-json", "dep:serde", "dep:serde_json"]
serde-json = ["serde_json"] # Alias for backwards compatibility
urlencode = ["askama_derive/urlencode", "dep:percent-encoding"]
with-actix-web = ["askama_derive/with-actix-web"]
with-axum = ["askama_derive/with-axum"]
with-rocket = ["askama_derive/with-rocket"]
with-warp = ["askama_derive/with-warp"]

## Enables the ability to put templates in a directory relative to the source file that uses them.
## Requires a nightly compiler and adding:
## RUSTFLAGS='--cfg proc_macro_span --cfg procmacro2_semver_exempt'
## to your cargo build command.
relative-paths = ["askama_derive/relative-paths"]

[dependencies]
askama_derive = { version = "0.13", path = "../askama_derive" }
askama_escape = { version = "0.11", path = "../askama_escape" }
humansize = { package = "humansize", version = "2", optional = true }
num-traits = { version = "0.2.6", optional = true }
percent-encoding = { version = "2.1.0", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "to-json"
harness = false
required-features = ["serde-json"]

[package.metadata.docs.rs]
features = ["config", "humansize", "num-traits", "serde-json"]
