[package]
name = "askama_actix"
version = "0.12.0"
description = "Actix-Web integration for Askama templates"
documentation = "https://docs.rs/askama"
keywords = ["markup", "template", "jinja2", "html"]
categories = ["template-engine"]
homepage = "https://github.com/djc/askama"
repository = "https://github.com/djc/askama"
license = "MIT OR Apache-2.0"
workspace = ".."
readme = "README.md"
edition = "2018"

[dependencies]
actix-web = { version = "4.0.0-beta.19", default-features = false }
askama = { version = "0.11.0", path = "../askama", default-features = false, features = ["with-actix-web", "mime", "mime_guess"] }

[dev-dependencies]
actix-rt = { version = "2", default-features = false }
actix-test = "=0.1.0-beta.11"
bytes = { version = "1" }
