[package]
name = "askama_actix"
version = "0.13.0"
description = "Actix-Web integration for Askama templates"
documentation = "https://docs.rs/askama"
keywords = ["markup", "template", "jinja2", "html"]
categories = ["template-engine"]
homepage = "https://github.com/djc/askama"
repository = "https://github.com/djc/askama"
license = "MIT OR Apache-2.0"
workspace = ".."
readme = "README.md"
edition = "2018"

[dependencies]
actix-web = { version = "4", default-features = false }
askama = { version = "0.11.1", path = "../askama", default-features = false, features = ["with-actix-web"] }
askama_shared = { version = "0.12.2", path = "../askama_shared" }

[dev-dependencies]
actix-rt = { version = "2", default-features = false }
actix-test = "=0.1.0-beta.13"
bytes = { version = "1" }
