[package]
name = "askama_actix"
version = "0.13.1"
description = "Actix-Web integration for Askama templates"
documentation = "https://docs.rs/askama"
keywords = ["markup", "template", "jinja2", "html"]
categories = ["template-engine"]
homepage = "https://github.com/djc/askama"
repository = "https://github.com/djc/askama"
license = "MIT OR Apache-2.0"
workspace = ".."
readme = "README.md"
edition = "2018"

[dependencies]
actix-web = { version = "4", default-features = false }
askama = { version = "0.11.2", path = "../askama", default-features = false, features = ["with-actix-web"] }

[dev-dependencies]
actix-rt = { version = "2", default-features = false }
actix-test = "0.1"
bytes = { version = "1" }

[features]
default = ["askama/default"]
config = ["askama/config"]
humansize = ["askama/humansize"]
markdown = ["askama/markdown"]
num-traits = ["askama/num-traits"]
serde-json = ["askama/serde-json"]
serde-yaml = ["askama/serde-yaml"]
urlencode = ["askama/urlencode"]
