[package]
name = "askama_axum"
version = "0.4.0"
edition = "2021"
rust-version = "1.65"
description = "Axum integration for Askama templates"
keywords = ["markup", "template", "jinja2", "html", "axum"]
categories = ["template-engine"]
homepage = "https://github.com/djc/askama"
repository = "https://github.com/djc/askama"
documentation = "https://docs.rs/askama"
license = "MIT OR Apache-2.0"
workspace = ".."
readme = "README.md"

[dependencies]
askama = { version = "0.12", path = "../askama", default-features = false, features = ["with-axum", "mime", "mime_guess"] }
axum-core = "0.4"
http = "1.0"

[dev-dependencies]
axum = { version = "0.7", default-features = false }
http-body-util = "0.1"
hyper = { version = "1.0", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }

[features]
default = ["askama/default"]
config = ["askama/config"]
humansize = ["askama/humansize"]
markdown = ["askama/markdown"]
num-traits = ["askama/num-traits"]
serde-json = ["askama/serde-json"]
serde-yaml = ["askama/serde-yaml"]
urlencode = ["askama/urlencode"]
