[package]
name = "askama_axum"
version = "0.6.0"
edition = "2021"
rust-version = "1.65"
description = "Axum integration for Askama templates"
keywords = ["markup", "template", "jinja2", "html", "axum"]
categories = ["template-engine"]
homepage = "https://github.com/djc/askama"
repository = "https://github.com/djc/askama"
documentation = "https://docs.rs/askama"
license = "MIT OR Apache-2.0"
workspace = ".."
readme = "README.md"

[dependencies]
askama = { version = "0.13", path = "../askama", default-features = false, features = ["with-axum"] }
axum-core = "0.5"
http = "1.0"

[dev-dependencies]
axum = { version = "0.8", default-features = false }
http-body-util = "0.1"
tokio = { version = "1.0", features = ["macros", "rt"] }
tower = "0.5"

[features]
default = ["askama/default"]
config = ["askama/config"]
humansize = ["askama/humansize"]
num-traits = ["askama/num-traits"]
serde-json = ["askama/serde-json"]
urlencode = ["askama/urlencode"]
