[package]
name = "askama_derive"
version = "0.12.0"
description = "Procedural macro package for Askama"
homepage = "https://github.com/djc/askama"
repository = "https://github.com/djc/askama"
license = "MIT/Apache-2.0"
workspace = ".."
readme = "README.md"
edition = "2018"

[lib]
proc-macro = true

[features]
config = ["serde", "toml"]
humansize = []
markdown = []
urlencode = []
serde-json = []
serde-yaml = []
num-traits = []
with-actix-web = []
with-axum = []
with-gotham = []
with-mendes = []
with-rocket = []
with-tide = []
with-warp = []

[dependencies]
base64 = "=0.13"
blake2 = "=0.10"
indexmap = "=1"
mime = "0.3"
mime_guess = "2"
nom = "7"
proc-macro2 = "1"
quote = "1"
serde = { version = "1.0", optional = true, features = ["derive"] }
syn = { version = "1", features = ["extra-traits"] }
toml = { version = "0.5", optional = true }
