[package]
name = "askama_derive"
version = "0.12.0"
description = "Procedural macro package for Askama"
homepage = "https://github.com/djc/askama"
repository = "https://github.com/djc/askama"
license = "MIT/Apache-2.0"
workspace = ".."
readme = "README.md"
edition = "2018"

[lib]
proc-macro = true

[features]
config = ["serde", "toml"]
humansize = []
localization = ["fluent-syntax", "fluent-templates", "serde", "toml"]
markdown = []
num-traits = []
serde-json = []
serde-yaml = []
urlencode = []
with-actix-web = []
with-axum = []
with-gotham = []
with-mendes = []
with-rocket = []
with-tide = []
with-warp = []

[dependencies]
fluent-syntax = { version = "0.11.0", optional = true, default-features = false }
fluent-templates = { version = "0.7.1", optional = true, default-features = false }
mime = "0.3"
mime_guess = "2"
nom = "7"
proc-macro2 = "1"
quote = "1"
serde = { version = "1.0", optional = true, features = ["derive"] }
syn = "1"
toml = { version = "0.5", optional = true }
