[package]
name = "askama_derive"
version = "0.12.5"
description = "Procedural macro package for Askama"
homepage = "https://github.com/djc/askama"
repository = "https://github.com/djc/askama"
license = "MIT/Apache-2.0"
workspace = ".."
readme = "README.md"
edition = "2021"
rust-version = "1.65"

[lib]
proc-macro = true

[features]
config = ["serde", "basic-toml"]
humansize = []
markdown = []
urlencode = []
serde-json = []
serde-yaml = []
num-traits = []
with-actix-web = []
with-axum = []
with-gotham = []
with-hyper = []
with-mendes = []
with-rocket = []
with-tide = []
with-warp = []

[dependencies]
parser = { package = "askama_parser", version = "0.2", path = "../askama_parser" }
mime = "0.3"
mime_guess = "2"
proc-macro2 = "1"
quote = "1"
serde = { version = "1.0", optional = true, features = ["derive"] }
syn = "2"
basic-toml = { version = "0.1.1", optional = true }
