[package]
name = "askama_escape"
version = "0.1.0"
authors = ["Dirkjan Ochtman <dirkjan@ochtman.nl>"]
description = "Optimized HTML escaping code, extracted from Askama"
documentation = "https://docs.rs/askama_escape"
keywords = ["html", "escaping"]
homepage = "https://github.com/djc/askama"
repository = "https://github.com/djc/askama"
license = "MIT OR Apache-2.0"
workspace = ".."

[badges]
appveyor = { repository = "djc/askama" }
maintenance = { status = "actively-developed" }
travis-ci = { repository = "djc/askama" }

[dependencies]
cfg-if ="0.1.6"

[build-dependencies]
version_check = "0.1.4"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "all"
harness = false
