[package]
name = "askama_escape"
version = "0.10.0"
authors = ["Dirkjan Ochtman <dirkjan@ochtman.nl>"]
description = "Optimized HTML escaping code, extracted from Askama"
documentation = "https://docs.rs/askama_escape"
keywords = ["html", "escaping"]
homepage = "https://github.com/djc/askama"
repository = "https://github.com/djc/askama"
license = "MIT OR Apache-2.0"
workspace = ".."
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "all"
harness = false
