[package]
name = "askama_fmt"
version = "0.1.0"
description = "Formatter for Askama template syntax"
homepage = "https://github.com/djc/askama"
repository = "https://github.com/djc/askama"
license = "MIT/Apache-2.0"
workspace = ".."
readme = "README.md"
edition = "2018"

[dependencies]
askama_parser = { version = "0.1.0", path = "../askama_parser", features = ["config"] }
