[package]
name = "askama_gotham"
version = "0.12.0"
authors = ["Dirkjan Ochtman <dirkjan@ochtman.nl>"]
description = "Gotham integration for Askama templates"
documentation = "https://docs.rs/askama"
keywords = ["markup", "template", "jinja2", "html"]
categories = ["template-engine"]
homepage = "https://github.com/djc/askama"
repository = "https://github.com/djc/askama"
license = "MIT OR Apache-2.0"
workspace = ".."
readme = "README.md"
edition = "2018"

[dependencies]
askama = { version = "0.11.0-beta.1", path = "../askama", default-features = false, features = ["with-gotham", "mime", "mime_guess"] }
gotham = { version = "0.7", default-features = false }
hyper = "0.14.4"

[dev-dependencies]
mime = "0.3"
