[package]
name = "askama_iron"
version = "0.10.0"
authors = ["Dirkjan Ochtman <dirkjan@ochtman.nl>"]
description = "Iron integration for Askama templates"
documentation = "https://docs.rs/askama"
keywords = ["markup", "template", "jinja2", "html"]
categories = ["template-engine"]
homepage = "https://github.com/djc/askama"
repository = "https://github.com/djc/askama"
license = "MIT OR Apache-2.0"
workspace = ".."
readme = "README.md"
edition = "2018"

[dependencies]
askama = { version = "0.10", path = "../askama", features = ["with-iron"] }
iron = { version = ">= 0.5, < 0.7" }
