[package]
name = "askama_mendes"
version = "0.2.0"
description = "Mendes integration for Askama templates"
documentation = "https://docs.rs/askama"
keywords = ["markup", "template", "jinja2", "html"]
categories = ["template-engine"]
homepage = "https://github.com/djc/askama"
repository = "https://github.com/djc/askama"
license = "MIT OR Apache-2.0"
workspace = ".."
readme = "README.md"
edition = "2018"

[features]
mendes-with-hyper = ["mendes/with-hyper", "askama/mendes-with-hyper"]

[dependencies]
askama = { version = "0.11.0-beta.1", path = "../askama", default-features = false, features = ["with-mendes", "mime", "mime_guess"] }
mendes = "0.1.0"

[dev-dependencies]
askama = { path = "../askama", default-features = false, features = ["mendes-with-hyper"] }
tokio = { version = "1.12", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.51"
mendes = { version = "0.1.0", features = ["with-hyper"] }
hyper = "0.14.15"
