[package]
name = "askama_parser"
version = "0.1.0"
description = "Parser for Askama templates"
documentation = "https://docs.rs/askama"
keywords = ["markup", "template", "jinja2", "html"]
categories = ["template-engine"]
homepage = "https://github.com/djc/askama"
repository = "https://github.com/djc/askama"
license = "MIT OR Apache-2.0"
workspace = ".."
readme = "README.md"
edition = "2021"
rust-version = "1.58"

[dependencies]
nom = { version = "7", default-features = false, features = ["alloc"] }

[dev-dependencies]
arbitrary = { version = "1.3.0", features = ["derive"] }
criterion = { version = "0.5.1", default-features = false }
getrandom = "0.2.10"
rand = { version = "0.8.5", default-features = false, features = ["std"] }
rand_xoshiro = "0.6.0"
random_code = { version = "0.1", path = "../random_code" }

[[bench]]
name = "random-templates"
harness = false
