[package]
name = "askama_poem"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
description = "Poem integration for Askama templates"
keywords = ["markup", "template", "jinja2", "html", "poem"]
categories = ["template-engine"]
homepage = "https://github.com/djc/askama"
repository = "https://github.com/djc/askama"
documentation = "https://docs.rs/askama"
license = "MIT OR Apache-2.0"
workspace = ".."
readme = "README.md"

[dependencies]
askama = { version = "0.12", path = "../askama", default-features = false, features = ["with-poem", "mime", "mime_guess"] }
http = "0.2"
poem = "1.3"

[dev-dependencies]
poem = { version = "1.3", features = ["test"] }
tokio = { version = "1.0", features = ["full"] }

[features]
default = ["askama/default"]
config = ["askama/config"]
humansize = ["askama/humansize"]
markdown = ["askama/markdown"]
num-traits = ["askama/num-traits"]
serde-json = ["askama/serde-json"]
serde-yaml = ["askama/serde-yaml"]
urlencode = ["askama/urlencode"]
