[package]
name = "askama_poem"
version = "0.14.0"
description = "Poem integration for Askama templates"
documentation = "https://docs.rs/askama"
keywords = ["markup", "template", "jinja2", "html"]
categories = ["template-engine"]
homepage = "https://github.com/djc/askama"
repository = "https://github.com/djc/askama"
license = "MIT OR Apache-2.0"
workspace = ".."
readme = "README.md"
edition = "2021"
rust-version = "1.65"

[dependencies]
poem = { version = "2.0.0", default-features = false }
askama = { version = "0.12", path = "../askama", default-features = false, features = ["with-poem"] }

[dev-dependencies]
poem = { version = "2.0.0", features = ["test"] }
tokio = "1.0"

[features]
default = ["askama/default"]
config = ["askama/config"]
humansize = ["askama/humansize"]
markdown = ["askama/markdown"]
num-traits = ["askama/num-traits"]
serde-json = ["askama/serde-json"]
serde-yaml = ["askama/serde-yaml"]
urlencode = ["askama/urlencode"]
