[package]
name = "askama_shared"
version = "0.10.2"
authors = ["Dirkjan Ochtman <dirkjan@ochtman.nl>"]
description = "Shared code for Askama"
homepage = "https://github.com/djc/askama"
repository = "https://github.com/djc/askama"
license = "MIT/Apache-2.0"
workspace = ".."
readme = "README.md"
edition = "2018"

[features]
default = ["config", "humansize", "num-traits", "percent-encoding"]
config = ["serde", "toml"]
json = ["serde", "serde_json"]
yaml = ["serde", "serde_yaml"]

[dependencies]
askama_escape = { version = "0.10", path = "../askama_escape" }
humansize = { version = "1.1.0", optional = true }
# default for features for nom don't work result in linker errors:
# https://github.com/rust-lang/rust/issues/62146
nom = { version = "5", default-features = false, features = ["std"] }
num-traits = { version = "0.2.6", optional = true }
proc-macro2 = "1"
quote = "1"
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_derive = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.8", optional = true }
syn = "1"
toml = { version = "0.5", optional = true }
percent-encoding = { version = "2.1.0", optional = true }

[package.metadata.docs.rs]
features = ["config", "humansize", "num-traits", "json", "yaml", "percent-encoding"]
