[package]
name = "askama_shared"
version = "0.12.1"
description = "Shared code for Askama"
homepage = "https://github.com/djc/askama"
repository = "https://github.com/djc/askama"
license = "MIT/Apache-2.0"
workspace = ".."
readme = "README.md"
edition = "2018"

[features]
default = ["config", "humansize", "num-traits", "percent-encoding"]
config = ["serde", "toml"]
json = ["serde", "serde_json", "askama_escape/json"]
markdown = ["comrak"]
yaml = ["serde", "serde_yaml"]

[dependencies]
askama_escape = { version = "0.10.3", path = "../askama_escape" }
comrak = { version = "0.12", optional = true, default-features = false }
humansize = { version = "1.1.0", optional = true }
mime = "0.3"
mime_guess = "2"
nom = "7"
num-traits = { version = "0.2.6", optional = true }
proc-macro2 = "1"
quote = "1"
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.8", optional = true }
syn = "1"
toml = { version = "0.5", optional = true }
percent-encoding = { version = "2.1.0", optional = true }

[package.metadata.docs.rs]
features = ["config", "humansize", "num-traits", "json", "yaml", "percent-encoding"]
