[package]
name = "askama_tide"
version = "0.11.2"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"
description = "Tide integration for Askama templates"
keywords = ["markup", "template", "html", "tide", "http-types"]
homepage = "https://github.com/djc/askama"
repository = "https://github.com/djc/askama"
documentation = "https://docs.rs/askama"
license = "MIT OR Apache-2.0"
workspace = ".."
readme = "README.md"

[dependencies]
askama = { version = "0.10.2", path = "../askama", features = ["with-tide"] }
tide = { version = "0.14", default-features = false }

[dev-dependencies]
async-std = { version = "1.6.5", features = ["attributes"] }
