[package]
name = "askama_tide"
version = "0.14.0"
edition = "2021"
rust-version = "1.58"
description = "Tide integration for Askama templates"
keywords = ["markup", "template", "html", "tide", "http-types"]
homepage = "https://github.com/djc/askama"
repository = "https://github.com/djc/askama"
documentation = "https://docs.rs/askama"
license = "MIT OR Apache-2.0"
workspace = ".."
readme = "README.md"

[dependencies]
askama = { version = "0.11.2", path = "../askama", default-features = false, features = ["with-tide"] }
tide = { version = "0.16", default-features = false }

[dev-dependencies]
async-std = { version = "1.6.5", features = ["attributes"] }

[features]
default = ["askama/default"]
config = ["askama/config"]
humansize = ["askama/humansize"]
markdown = ["askama/markdown"]
num-traits = ["askama/num-traits"]
serde-json = ["askama/serde-json"]
serde-yaml = ["askama/serde-yaml"]
urlencode = ["askama/urlencode"]
