[package]
name = "askama_warp"
version = "0.10.0"
authors = ["Dirkjan Ochtman <dirkjan@ochtman.nl>", "Bjørn Madsen <bm@aeons.dk>"]
description = "Warp integration for Askama templates"
documentation = "https://docs.rs/askama"
keywords = ["markup", "template", "jinja2", "html"]
categories = ["template-engine"]
homepage = "https://github.com/djc/askama"
repository = "https://github.com/djc/askama"
license = "MIT OR Apache-2.0"
workspace = ".."
edition = "2018"

[dependencies]
askama = { version = "0.10", path = "../askama", features = ["with-warp", "mime", "mime_guess"] }
warp = { version = "0.2", default-features = false }

[dev-dependencies]
tokio-test = "0.2"
tokio = { version = "0.2", features = ["macros"] }
