[package]
name = "askama_parser-fuzz"
version = "0.1.0"
publish = false
edition = "2021"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[package.metadata]
cargo-fuzz = true

[dependencies]
askama_parser = { version = "0.1", path = "../askama_parser" }
random_code = { version = "0.1", path = "../random_code" }

afl = { version = "0.13.3", optional = true }
arbitrary = { version = "1.3.0", optional = true }
honggfuzz = { version ="0.5.55", optional = true }
libfuzzer-sys = { version = "0.4.6", optional = true }

[features]
afl = ["dep:afl", "dep:arbitrary"]
fuzzer = ["dep:libfuzzer-sys"]
honggfuzz = ["dep:honggfuzz"]

[[bin]]
name = "parse-random-code-afl"
path = "src/bin/parse-random-code-afl.rs"
test = false
doc = false
required-features = ["afl"]

[[bin]]
name = "parse-random-code-fuzzer"
path = "src/bin/parse-random-code-fuzzer.rs"
test = false
doc = false
required-features = ["fuzzer"]

[[bin]]
name = "parse-random-code-honggfuzz"
path = "src/bin/parse-random-code-honggfuzz.rs"
test = false
doc = false
required-features = ["honggfuzz"]
