[package]
name = "askama-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
askama_parser = { path = "../askama_parser" }

[profile.release]
debug = 1

[[bin]]
name = "askama_parser-fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"
test = false
doc = false
